# dbt-bigquery-monitoring

./: .changie.yaml  .editorconfig  .gitattributes  .gitignore  .sqlfluff  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dbt-bigquery-monitoring.code-workspace  dbt_project.yml  packages.yml  pyproject.toml  tox.ini
.changes/: v0.1.0.md  v0.10.0.md  v0.10.1.md  v0.10.2.md  v0.10.3.md  v0.11.0.md  v0.11.1.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.14.1.md  v0.14.2.md  v0.14.3.md  v0.15.0.md  v0.16.0.md  v0.17.0.md  v0.17.1.md  v0.17.2.md  v0.18.0.md  v0.18.1.md  v0.18.2.md  v0.18.3.md  v0.18.4.md  v0.19.0.md  v0.19.1.md  v0.19.2.md  v0.19.3.md  v0.2.0.md  v0.20.0.md  v0.20.1.md  v0.20.2.md  v0.20.3.md  v0.20.4.md  v0.21.0.md  v0.22.0.md  v0.23.0.md  v0.23.1.md  v0.24.0.md  v0.24.1.md  v0.25.0.md  (+19 more)
.github/: dependabot.yml
docs/: architecture.md  audit-logs-vs-information-schema.md  configuration.md  contributing.md  datamarts.md  installation.md  intro.md  quickstart.md  required-rights.md  running-the-package.md  using-the-package.md
documentation_parser/: Makefile  config.py  documentation_parser.py  html_content.html  html_content_2.html  schemata_links.sql  schemata_links.yml  schemata_options.sql  schemata_options.yml  sql_generator.py  test_documentation_parser.py
integration_tests/: .user.yml  config.py  dbt_project.yml  profiles.yml
macros/: bq_dynamic_copy_partitions_insert_overwrite_sql.sql  column_presence.sql  compute_incremental_minute_filter.sql  currency_to_symbol.sql  dbt_bigquery_monitoring_materalization.sql  (+22 more)
(+560 files in other folders)
