[project]
name = "dbt-bigquery-monitoring"
version = "0.0.0"
description = "dbt bigquery monitoring package"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "dbt-bigquery>=1.9.2",
]

[project.urls]
Homepage = "https://github.com/bqbooster/dbt-bigquery-monitoring"
Issues = "https://github.com/bqbooster/dbt-bigquery-monitoring/issues"

[dependency-groups]
dev = [
    "sqlfluff>=3.4.1",
    "sqlfluff-templater-dbt>=3.4.1",
]
